Update .gitignore: Change .references to references/ for directory exclusion

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Finder (MacOS) folder config
 .DS_Store
 
-.references
+references/
 
 # generated build data (run `bun run build` to create)
 data/*.generated.json
