--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "bun test server"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.564.0",
     "next": "^16.1.6",
